src/objects/Invoice__c.object
<CustomObject>
    <description>Milestone Invoice Billing</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_To_Finish_including_retainage__c</fullName>
        <description>Contract Sum To Date - Total Paid Less Retainage</description>
        <formula>Contract_Sum_To_Date__c  -  Total_Paid_Less_Retainage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance To Finish including retainage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Date__c</fullName>
        <label>Billed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billed_Hours__c</fullName>
        <label>Billed Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Sum_To_Date__c</fullName>
        <description>Contract Sum To Date updated from Oracle</description>
        <label>Contract Sum To Date</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Payment_Due__c</fullName>
        <description>Total Paid Less Retainage - Less   Previous certificates for payment</description>
        <formula>Total_Paid_Less_Retainage__c  -  Less_Previous_certificates_for_payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Payment Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description of Work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoiced_Hours__c</fullName>
        <label>Invoiced Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoicing_Amount__c</fullName>
        <label>Invoicing Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lance_To_Finish__c</fullName>
        <description>Schedule of value - (sum of work completed from previous application + work completed this period + Materials presently stored)</description>
        <formula>Scheduled_Value__c  - ( Work_Completed_from_previous_application__c  +  Work_Completed_this_period__c  +  Materials_Presently_Stored__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lance To Finish</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Less_Previous_certificates_for_payment__c</fullName>
        <description>Less Previous certificates for payment</description>
        <label>Less Previous certificates for payment</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Materials_Presently_Stored__c</fullName>
        <description>Materials Presently Stored</description>
        <label>Materials Presently Stored</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Change_by_Change_Orders__c</fullName>
        <description>Net Change by Change Orders updated from Oracle</description>
        <label>Net Change by Change Orders</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Contract_Sum__c</fullName>
        <description>Original Contract Sum updated from Oracle</description>
        <label>Original Contract Sum</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quibooks_Bill__c</fullName>
        <label>Quibooks Bill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retainage_1__c</fullName>
        <description>Retainage 1</description>
        <label>Retainage 1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainage_2__c</fullName>
        <description>Retainage 2</description>
        <label>Retainage 2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Value__c</fullName>
        <description>Scheduled Value</description>
        <label>Scheduled Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Payment Received</fullName>
                </value>
                <value>
                    <fullName>Partially Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tasks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tasks</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Approved_This_Month_additions__c</fullName>
        <description>Total Approved This Month - additions</description>
        <label>Total Approved This Month - additions</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Approved_This_Month_deductions__c</fullName>
        <description>Total Approved This Month -deductions</description>
        <label>Total Approved This Month -deductions</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Stored_To_Date__c</fullName>
        <description>Total Completed &amp; Stored To Date</description>
        <label>Total Completed &amp; Stored To Date</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Completed_and_Stored_to_Date__c</fullName>
        <description>sum of work completed from previous application + work completed this period + Materials presently stored</description>
        <formula>Work_Completed_from_previous_application__c  +  Work_Completed_this_period__c  +  Materials_Presently_Stored__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Completed and Stored to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Less_Retainage__c</fullName>
        <description>Total Completed &amp; Stored To Date - (Retainage 1 + Retainage 2)</description>
        <formula>Total_Completed_Stored_To_Date__c  - ( Retainage_1__c  +  Retainage_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Paid Less Retainage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Completed_Total__c</fullName>
        <description>sum of work completed from previous application + work completed this period</description>
        <formula>Work_Completed_from_previous_application__c  +  Work_Completed_this_period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Completed Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Completed_from_previous_application__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Work Completed from previous application</description>
        <label>Work Completed from previous application</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Completed_this_period__c</fullName>
        <description>Work Completed this period</description>
        <label>Work Completed this period</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_change_approve_pre_mon_ded__c</fullName>
        <description>total changes approved in previous months by owner -deductions</description>
        <label>total changes approved previous month</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>total_change_approve_pre_month_add__c</fullName>
        <description>total changes approved in previous months by owner -additions</description>
        <label>total changes approved previous month</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Milestone Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Invoices</pluralLabel>
    <recordTypes>
        <fullName>New_Bill</fullName>
        <active>true</active>
        <label>New Bill</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Invoice</fullName>
        <active>true</active>
        <label>New  Invoice</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>